# EDU

./: .gitignore  LICENSE.md  README.md  Readme.md
Exams/: Readme.md
Exams/IBE151/1/: 1.py
IBE_102_Webutvikling/Eksamen_2017/: felles.php  index.php  loggut.php  login.php  nybruker.php  sjekklogin.php
IBE_102_Webutvikling/Eksamen_2021/: 2_teksthusker.php  3_nyttpunkt.php  4_tusentall.php  README.md  beskrivelser.txt  style.css
IBE_102_Webutvikling/Oblig_2/: Readme.md
IBE_102_Webutvikling/Oblig_3/: Readme.md  oppgavetekst.txt
IBE_102_Webutvikling/Oblig_5/: README.md  bunn.php  felles.php  hjelp.php  oblig2.php  oblig3.php  oblig4.php  topp.php  valutaer.php
IBE_102_Webutvikling/Oblig_6/: oblig6.php
IBE_102_Webutvikling/Oblig_7/: README.md  bunn.php  felles.php  nyheter.php  oblig2.php
IBE_102_Webutvikling/Oblig_8/: README.md  chat.php  felles.php  login.php  oblig4.php  topp.php
IBE_103_Webutvikling/Oblig_2/: oblig2.php
IBE_103_Webutvikling/Practice/: table_loo.php  table_loop.php
IBE_120_Excel_VBA_Business_Data/Access_Connection/: README.md  somemakro.bas
IBE_120_Excel_VBA_Business_Data/Oblig_5/: README.md  miljodataStavanger.accdb  oopg.1.xlsx  sykkel_uke.xml  sykkel_uke.xsd
IBE_120_Excel_VBA_Business_Data/Oblig_6/: makro.bas  oppg6.xlsm
IBE_211/Oblig_1/: oblig1.txt
Rust_Language/: Readme.md
self_study/: README.md
self_study/programming/languages/rust/rust_lang_book/2_Programming_a_Guessing_Game/guessing_game/: Cargo.toml
self_study/programming/languages/rust/rust_lang_book/2_Programming_a_Guessing_Game/guessing_game/src/: main.rs
(+536 files in other folders)
