[package]
name = "guessing_game"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
# The specifier 0.8.5 is actually shorthand for ^0.8.5, which means any version that is at least 0.8.5 but below 0.9.0.
  # $ cargo build
  # Cargo.lock
  #   Rust creates the Cargo.lock file the first time you run cargo build.
  #   This will force the use of same version if new versions of dependency is released.
  #   This will reproduce builds identical to previous builds on unchanged source code.

  # $ cargo update
  #   Ignore the Cargo.lock file and figure out all the latest versions in Cargo.toml.
  #   It will still not update to new "major" versions, only "patch" versions.
  #     see https://semver.org/
  # changing from 0.8.5 to 0.9.0 will update to new minor version
rand = "0.8.5"
